fixes spacing

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ header {
   border-radius: 10px;
 }
 
+#about {
+  padding: 5%;
+}
+
 
 #projects {
   margin-bottom: 10%;
@@ -22,23 +26,23 @@ header {
 }
 
 .each-project {
-  margin: 4%;
+  margin: 4% 0 4% 0;
   padding: 1%;
   display: inline-block;
-  width: 25%;
+  width: 45%;
 }
 
 @media screen and (max-width: 920px) {
   #projects {
-    width: 60%;
+    width: 90%;
     margin-bottom: 30%;
     text-align: center;
   }
-  
-  .each-project {
-    display: block;
+
+  header {
     width: 100%;
   }
+
 }
 
 .uplift, .restaurant-app, .otter-code{
@@ -76,6 +80,14 @@ footer a {
     display: block;
   }
 
+  #projects h4 {
+    text-align: center;
+  }
+
+  .each-project {
+    display: block;
+    width: 100%;
+  }
 
 }
 
